# embedding-module

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
embedding_module/: __init__.py  config.py  dataset.py  embedder.py  features.py  generate_query_embedding.py  retriever.py
embedding_module/config/: config.py
embedding_module/data_processing/: dataset.py
embedding_module/embedding/: embedder.py
embedding_module/indexing/: indexer.py
embedding_module/modeling/: predict.py  train.py
embedding_module/query/: query.py
embedding_module/scripts/: generate_query_embedding.py
embedding_module/utils/: logger.py
